--- a/actividades.html
+++ b/actividades.html
@@ -62,7 +62,7 @@
     </header>
 
     <nav>
-        <a href="ova.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="modulos.html">Módulos</a>
         <a href="actividades.html">Actividades</a>
         <a href="evaluacion.html">Evaluación</a>
