--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
         <a href="creditos.html">Créditos</a>
     </nav>
 
-    <section id="evaluacion">
-        <h2>Evaluación</h2>
-        <p>Autoevaluación y cuestionario final con retroalimentación inmediata.</p>
+    <section id="inicio">
+        <h2>Bienvenido</h2>
+        <p>Este OVA te introducirá al pensamiento computacional a través de ejemplos, actividades y recursos interactivos.</p>
+        <a href="modulos.html" class="btn">Comenzar</a>
     </section>
 
     <footer>
