--- a/actividades.html
+++ b/actividades.html
@@ -33,7 +33,12 @@
             color: #333;
         }
         
+        . title{
+            text-align: center;
+        }
+
         section {
+            text-align: left;
             max-width: 800px;
             padding: 20px;
             margin: 40px auto;
@@ -78,14 +83,17 @@
         <a href="creditos.html" style="margin: 0 15px; text-decoration: none; color: #333;">Créditos</a>
     </nav>
 
-
-    <section id="actividades">
+        <div class="title">
         <h2>Actividades</h2>
-        <p>Realiza estas actividades para poner en práctica lo aprendido. (Aquí puedes insertar formularios o enlaces a herramientas como Genially o Google Forms).</p>
+        <p>Realiza estas actividades para poner en práctica lo aprendido.</p>
+        </div>
+    <section id="actividades">
         <iframe src="https://h5p.org/h5p/embed/1529598" width="1090" height="730" frameborder="0" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *" title="Ardillas y nueces"></iframe>
         <script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js"
             charset="UTF-8"></script>
-
+        <iframe src="https://h5p.org/h5p/embed/1529617" width="1090" height="798" frameborder="0" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *" title="Avión de papel"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
+        <p>Asimila los objetos con las figuras geométricas</p>
+        <iframe src="https://h5p.org/h5p/embed/1529621" width="1090" height="682" frameborder="0" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *" title="Similitud"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
     </section>
 
     <footer>
