--- a/creditos.html
+++ b/creditos.html
@@ -100,7 +100,7 @@
                 <strong>Autores:</strong>
                 <span>Sebastian Bernal</span>
                 <span>Jhoan Velasquez</span>
-                <span>Nicolas Bernal</span>
+                <span>Nicolas Quenan</span>
             </div>
             <div class="institucion">
                 <strong>Institución:</strong> Universidad de Nariño, Pasto
