Se Agreg{o contenido complementario a los Modulos

--- a/modulos.html
+++ b/modulos.html
@@ -87,94 +87,119 @@
     <section style="text-align: center; font-family: Arial, sans-serif; padding: 0.0000001%; line-height: 1.6;">
 
         <!-- Módulo 1 -->
-        <h2 style="font-size: 2em; margin-top: 40px;">Módulo 1: Descomposición</h2>
+<h2 style="font-size: 2em; margin-top: 40px;">Módulo 1: Descomposición</h2>
 
-        <div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
-            <h3 style="margin-top: 0;">¿Qué es?</h3>
-            <p>La descomposición es la habilidad de dividir un problema complejo en partes más pequeñas y manejables. Esta técnica permite entender mejor el problema y resolver cada parte de manera ordenada.</p>
-        </div>
+<div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
+    <h3 style="margin-top: 0;">¿Qué es?</h3>
+    <p>La descomposición es la habilidad de dividir un problema complejo en partes más pequeñas y manejables. Esta técnica permite entender mejor el problema y resolver cada parte de manera ordenada.</p>
+</div>
 
-        <div style="margin: 20px auto; max-width: 600px; height: 200px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
-            <img src="/ova/recursos/descomposicion.jpg" alt="Descomposición" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
-        </div>
+<div style="margin: 20px auto; max-width: 600px; height: 200px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+    <img src="/ova/recursos/descomposicion.jpg" alt="Descomposición" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
+</div>
 
+<div style="background: #fffce6; border-left: 6px solid #e0b200; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>¿Cómo desarrollarlo?</strong>
+    <p>Comienza enfrentando problemas del día a día y divídelos en partes. Por ejemplo, si tienes que estudiar para un examen, separa por temas, recursos y tiempos. Esta práctica habitual fortalece tu habilidad de organizar ideas y planificar soluciones paso a paso.</p>
+</div>
 
+<div style="border: 1px dashed #0077cc; background: #f9f9f9; padding: 15px; border-radius: 8px; margin: 20px auto; max-width: 700px;">
+    <strong>Ejemplo práctico:</strong>
+    <p>Supón que tienes que organizar un viaje familiar. En vez de pensarlo como un solo bloque, lo descompones en tareas más pequeñas: elegir el destino, reservar alojamiento, planificar actividades, preparar el equipaje, y asignar un presupuesto. Cada parte puede resolverse individualmente.</p>
+    <p><em></em> Es como armar un mueble: no ensamblas todo de una vez, lo haces pieza por pieza siguiendo instrucciones claras.</p>
+</div>
 
-        <div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
-            <strong>Actividad sugerida:</strong>
-            <p>Piensa en la tarea de organizar una fiesta. Haz una lista detallada con todos los pasos y subtareas que implica (invitaciones, comida, música, decoración, etc.). Reflexiona sobre cómo al dividir tareas es más fácil resolverlas.</p>
-        </div>
+<div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>Actividad sugerida:</strong>
+    <p>Piensa en la tarea de organizar una fiesta. Haz una lista detallada con todos los pasos y subtareas que implica (invitaciones, comida, música, decoración, etc.). Reflexiona sobre cómo al dividir tareas es más fácil resolverlas.</p>
+</div>
 
-        <hr style="border: none; border-top: 2px solid #0077cc; margin: 50px auto; width: 100%;">
+<!-- Módulo 2 -->
+<h2 style="font-size: 2em; margin-top: 10%;">Módulo 2: Abstracción</h2>
 
+<div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
+    <h3 style="margin-top: 0;">¿Qué es?</h3>
+    <p>La abstracción consiste en ignorar los detalles innecesarios para centrarse en lo fundamental del problema. Ayuda a construir soluciones más generales que puedan aplicarse a otros contextos similares.</p>
+</div>
 
-        <!-- Módulo 2 -->
-        <h2 style="font-size: 2em; margin-top: 10%;">Módulo 2: Abstracción</h2>
+<div style="margin: 20px auto; max-width: 600px; height: 200px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+    <img src="/ova/recursos/abstraccion.png" alt="Abstracción" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
+</div>
 
-        <div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
-            <h3 style="margin-top: 0;">¿Qué es?</h3>
-            <p>La abstracción consiste en ignorar los detalles innecesarios para centrarse en lo fundamental del problema. Ayuda a construir soluciones más generales que puedan aplicarse a otros contextos similares.</p>
-        </div>
+<div style="background: #fffce6; border-left: 6px solid #e0b200; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>¿Cómo desarrollarlo?</strong>
+    <p>Entrena tu mente para enfocarse en lo esencial: identifica patrones clave, evita distraerte con datos irrelevantes y formula conceptos más generales. Usa ejemplos comparativos o analogías para simplificar ideas complejas.</p>
+</div>
 
-        <div style="margin: 20px auto; max-width: 600px; height: 200px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
-            <img src="/ova/recursos/abstraccion.png" alt="Descomposición" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
-        </div>
-
-        <div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
-            <strong>Actividad sugerida:</strong>
-            <p>Observa diferentes tipos de sillas (oficina, comedor, playa) y haz una lista de las características comunes. Luego, crea una definición general de "silla" que funcione para todas, ignorando los detalles específicos.</p>
-        </div>
-
-        <hr style="border: none; border-top: 2px solid #28ac49; margin: 50px auto; width: 100%;">
-
-
-        <!-- Módulo 3 -->
-        <h2 style="font-size: 2em; margin-top: 10%;">Módulo 3: Patrones</h2>
-
-        <div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
-            <h3 style="margin-top: 0;">¿Qué es?</h3>
-            <p>Reconocer patrones significa identificar similitudes o regularidades en los problemas o datos. Esto permite usar soluciones previas en situaciones nuevas, ahorrando tiempo y esfuerzo.</p>
-        </div>
-
-        <div style="margin: 20px auto; max-width: 600px; height: 200px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
-            <img src="/ova/recursos/patrones.jpg" alt="Descomposición" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
-        </div>
-
-        <div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
-            <strong>Actividad sugerida:</strong>
-            <p>Analiza tu rutina diaria. ¿Qué acciones repites todos los días al despertar o al prepararte para salir? Identifica estos patrones y piensa cómo podrías automatizarlos o mejorarlos.</p>
-        </div>
-
-        <hr style="border: none; border-top: 2px solid #c2305c; margin: 50px auto; width: 100%;">
+<div style="border: 1px dashed #28ac49; background: #f9f9f9; padding: 15px; border-radius: 8px; margin: 20px auto; max-width: 700px;">
+    <strong>Ejemplo práctico:</strong>
+    <p>Imagina que diseñarás una app de transporte. No necesitas incluir la marca de cada vehículo ni el color de los uniformes de los conductores. Lo esencial es que hay usuarios, vehículos, rutas y tiempos estimados. Eso es lo que abstraes para modelar tu sistema.</p>
+    <p><em></em> Es como hacer un mapa: no dibujas cada árbol o edificio, solo lo necesario para guiarte con claridad.</p>
+</div>
 
 
-        <!-- Módulo 4 -->
-        <h2 style="font-size: 2em; margin-top: 10%;">Módulo 4: Algoritmos</h2>
+<div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>Actividad sugerida:</strong>
+    <p>Observa diferentes tipos de sillas (oficina, comedor, playa) y haz una lista de las características comunes. Luego, crea una definición general de "silla" que funcione para todas, ignorando los detalles específicos.</p>
+</div>
 
-        <div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
-            <h3 style="margin-top: 0;">¿Qué es?</h3>
-            <p>Un algoritmo es una serie de pasos ordenados y claros que permiten resolver un problema o realizar una tarea. Son la base de los programas informáticos y de muchas soluciones en la vida diaria.</p>
-        </div>
+<!-- Módulo 3 -->
+<h2 style="font-size: 2em; margin-top: 10%;">Módulo 3: Patrones</h2>
 
-        <div style="margin: 20px auto; max-width: 600px; height: 300px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
-            <img src="/ova/recursos/algortimos.png" alt="Descomposición" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
-        </div>
+<div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
+    <h3 style="margin-top: 0;">¿Qué es?</h3>
+    <p>Reconocer patrones significa identificar similitudes o regularidades en los problemas o datos. Esto permite usar soluciones previas en situaciones nuevas, ahorrando tiempo y esfuerzo.</p>
+</div>
 
-        <div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
-            <strong>Actividad sugerida:</strong>
-            <p>Escribe paso a paso cómo hacer un sándwich de jamón y queso, como si se lo explicaras a una persona que nunca lo ha hecho. Asegúrate de que cada instrucción sea clara y en orden.</p>
-        </div>
+<div style="margin: 20px auto; max-width: 600px; height: 200px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+    <img src="/ova/recursos/patrones.jpg" alt="Patrones" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
+</div>
 
-        <hr style="border: none; border-top: 2px solid #c2305c; margin: 50px auto; width: 100%;">
+<div style="background: #fffce6; border-left: 6px solid #e0b200; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>¿Cómo desarrollarlo?</strong>
+    <p>Presta atención a lo que se repite en tus tareas diarias o problemas frecuentes. Anota qué elementos se presentan siempre o con regularidad y reflexiona sobre cómo podrías aprovecharlos para anticiparte o mejorar decisiones futuras.</p>
+</div>
 
-        <div style="background: #f4f4f4; border-radius: 10px; padding: 20px; margin: 20px auto; width: 100%; max-width: 800px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <div style="text-align: center; margin-bottom: 10px; font-size: 1.5em; font-weight: bold; color: #0077cc;">
-                Video Ilustrativo
-            </div>
-            <div style="overflow: hidden; border-radius: 10px; background: #000;">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/ti315UlVtS4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
+<div style="border: 1px dashed #c2305c; background: #f9f9f9; padding: 15px; border-radius: 8px; margin: 20px auto; max-width: 700px;">
+    <strong>Ejemplo práctico:</strong>
+    <p>En programación, muchos videojuegos siguen el mismo patrón de estructura: un menú principal, niveles progresivos, sistema de puntaje y vidas limitadas. Reconocer estos patrones permite a los desarrolladores reutilizar código y mecánicas ya probadas.</p>
+    <p><em></em> Es como detectar la receta base detrás de muchas sopas: agua, sal y verduras; solo varían los ingredientes especiales.</p>
+</div>
+
+
+<div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>Actividad sugerida:</strong>
+    <p>Analiza tu rutina diaria. ¿Qué acciones repites todos los días al despertar o al prepararte para salir? Identifica estos patrones y piensa cómo podrías automatizarlos o mejorarlos.</p>
+</div>
+
+<!-- Módulo 4 -->
+<h2 style="font-size: 2em; margin-top: 10%;">Módulo 4: Algoritmos</h2>
+
+<div style="border: 1px solid #ccc; padding: 15px; border-radius: 8px; margin: 15px auto; max-width: 700px;">
+    <h3 style="margin-top: 0;">¿Qué es?</h3>
+    <p>Un algoritmo es una serie de pasos ordenados y claros que permiten resolver un problema o realizar una tarea. Son la base de los programas informáticos y de muchas soluciones en la vida diaria.</p>
+</div>
+
+<div style="margin: 20px auto; max-width: 600px; height: 300px; background: #eee; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+    <img src="/ova/recursos/algortimos.png" alt="Algoritmos" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease; cursor: pointer;" onclick="this.style.transform = this.style.transform === 'scale(1.1)' ? 'scale(1)' : 'scale(1.1)'">
+</div>
+
+<div style="background: #fffce6; border-left: 6px solid #e0b200; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>¿Cómo desarrollarlo?</strong>
+    <p>Practica redactando instrucciones claras y ordenadas para tareas simples, como cocinar o armar algo. Luego intenta seguirlas tú mismo o pídele a alguien que lo haga para validar su precisión y efectividad.</p>
+</div>
+
+<div style="border: 1px dashed #ff9900; background: #f9f9f9; padding: 15px; border-radius: 8px; margin: 20px auto; max-width: 700px;">
+    <strong>Ejemplo práctico:</strong>
+    <p>Para hacer una transferencia bancaria desde una app: 1) Inicias sesión, 2) eliges "Transferencias", 3) escribes el número de cuenta, 4) indicas el monto, 5) confirmas con tu clave. Es un algoritmo cotidiano que sigue pasos exactos.</p>
+    <p><em></em> Es como seguir una receta de cocina: si cambias el orden o te saltas un paso, el resultado puede fallar.</p>
+</div>
+
+
+<div style="background: #e0f3ff; border-left: 6px solid #0077cc; padding: 15px; margin: 15px auto; max-width: 700px; text-align: left;">
+    <strong>Actividad sugerida:</strong>
+    <p>Escribe paso a paso cómo hacer un sándwich de jamón y queso, como si se lo explicaras a una persona que nunca lo ha hecho. Asegúrate de que cada instrucción sea clara y en orden.</p>
+</div>
 
 
     </section>
