--- a/evaluacion.html
+++ b/evaluacion.html
@@ -82,6 +82,14 @@
         .module {
             margin-bottom: 30px;
         }
+        button {
+            display: inline-block;
+            background: #0077cc;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
     </style>
 </head>
 
@@ -104,6 +112,9 @@
         <div class="evaluacion">
             <h2>Evaluación</h2>
             <p>Autoevaluación y cuestionario final con retroalimentación inmediata.</p>
+            <div style="text-align: center;">
+                <a href="https://create.kahoot.it/share/evaluacion-software-autoria/a659567f-41e3-45dd-aa32-a3b773022157" target="_blank"><button>Evaluacion</button></a>
+            </div>
         </div>
     </main>
 
